# CL-basic

./: CMakeLists.txt  OpenCLKernels.cl  README.md  TODO.md  cl_error_util.c  cl_error_util.h  cl_error_vals.h  cl_util.c  cl_util.h  helper_timer.h  main.cpp
cmake/: FindOpenCL.cmake
